# exercism

./: .envrc  .gitignore  .gitpod.yml  .mise.toml  .pre-commit-config.yaml  .pylintrc  .rubocop.yml  .tool-versions  Gemfile  LICENSE  Project.toml  README.md  devbox.json  justfile  package-lock.json  package.json  pyproject.toml  pytest.ini  shell.nix
.devcontainer/: devcontainer.json  devcontainer.json.orig
.github/workflows/: ballerina.yaml  ballerina.yml  bash.yml  black.yml  codeql-analysis.yml  crystal.yml  elm.yml  haskell.yaml  haskell.yml  julia.yml  ocaml.yml  pylint.yml  pytest.yml  python.yml  reviewdog.yml  ruby.yml
awk/hello-world/: HELP.md  README.md
awk/two-fer/: test-two-fer.bats  two-fer.awk
ballerina/calculator-service/: Dependencies.toml  HELP.md  README.md  calculator_service.bal
ballerina/echo-service/: Dependencies.toml  HELP.md  README.md  echo_service.bal
ballerina/error-handling/: Dependencies.toml  error_handling.bal
ballerina/greeting-service/: Dependencies.toml  HELP.md  README.md
ballerina/hello-world/: Dependencies.toml  HELP.md  README.md  hello_world.bal
ballerina/hello-world-service/: Dependencies.toml  HELP.md  README.md
ballerina/service-composition/: Dependencies.toml  travel_agency_service.bal
ballerina/service-invocation/: Dependencies.toml  HELP.md  README.md  service_invocation.bal
bash/acronym/: acronym.sh
bash/error-handling/: error_handling.sh
bash/hamming/: hamming.sh
bash/hello-world/: HELP.md  hello_world.sh
bash/raindrops/: raindrops.sh
bash/two-fer/: HELP.md  README.md  two_fer.sh
clojure/reverse-string/: .rebel_readline_history
clojure/series/: README.md
clojure/two-fer/: README.md
cpp/hello-world/: HELP.md  README.md  hello_world.cpp
cpp/triangle/: triangle.cpp
crystal/acronym/: HELP.md  README.md
crystal/anagram/: HELP.md  README.md
crystal/armstrong-numbers/: HELP.md  README.md
crystal/atbash-cipher/: HELP.md  README.md
crystal/binary/: HELP.md  README.md
crystal/difference-of-squares/: HELP.md  README.md
crystal/hello-world/: HELP.md  README.md
elixir/hello-world/: .gitignore  HELP.md  (+1 more)
(+320 files in other folders)
