[tool.poetry]
name = "exercism"
version = "0.1.0"
description = ""
authors = ["Stefhen Hovland <stefhen.hovland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cache = "^1.0"
pytest-subtests = "^0.5.0"
pytest-pylint = "^0.18.0"
jupyterlab = "^3.1.11"
ipython = "^7.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
