[tool.poetry]
name = "exercism"
version = "0.1.0"
description = ""
authors = ["Stefhen Hovland <stefhen.hovland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.1.11"
ipython = "^7.27.0"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
