[tool.poetry]
name = "exercism"
version = "0.1.0"
description = ""
authors = ["Stefhen Hovland <stefhen.hovland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cache = "^1.0"
pytest-subtests = "^0.5.0"
pytest-pylint = "^0.18.0"
jupyterlab = "^3.1.11"
ipython = "^8.10.0"
black = "^21.9b0"


[tool.pdm.dev-dependencies]
dev = [
    "pytest<7.0.0,>=6.2.5",
    "pytest-cache<2.0,>=1.0",
    "pytest-subtests<1.0.0,>=0.5.0",
    "pytest-pylint<1.0.0,>=0.18.0",
    "jupyterlab<4.0.0,>=3.1.11",
    "ipython<9.0.0,>=8.10.0",
    "black<22.0,>=21.9b0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Stefhen Hovland", email = "stefhen.hovland@gmail.com"},
]
requires-python = "<4.0,>=3.8"
dependencies = []
name = "exercism"
version = "0.1.0"
description = ""

[dependency-groups]
dev = [
    "pytest<7.0.0,>=6.2.5",
    "pytest-cache<2.0,>=1.0",
    "pytest-subtests<1.0.0,>=0.5.0",
    "pytest-pylint<1.0.0,>=0.18.0",
    "jupyterlab<4.0.0,>=3.1.11",
    "ipython<9.0.0,>=8.10.0",
    "black<22.0,>=21.9b0",
]
